--- a/Q2/d1397056.html
+++ b/Q2/d1397056.html
@@ -3,40 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>圖片展示系統</title>
+  <title>Image Attention Experiment</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="d1397056.css">
 </head>
 <body>
+
+<div id="title-description">
+  <h1 id="title">Image Attention Experiment</h1>
+  <br>
+  <p id="description">Hover your mouse over the image you're interested in to start the timer.</p>
+  <br>
+</div>
+
 <!-- 篩選按鈕區 -->
 <nav class="filter-bar">
-  <button class="active" data-filter="all">全部圖片</button>
-  <button data-filter="nature">自然風景圖</button>
-  <button data-filter="city">城市風景圖</button>
+  <button class="active" data-filter="all">ALL</button>
+  <button data-filter="nature">Nature Landscapes</button>
+  <button data-filter="city">City Landscapes</button>
 </nav>
 
 <!-- 圖片畫廊 -->
 <ul class="gallery">
-  <!-- 自然風景圖 (共 5 張) -->
-<!--  <li data-category="nature"><img src="images/nature1.jpg" alt="自然風景 1"></li>-->
-<!--  <li data-category="nature"><img src="images/nature2.jpg" alt="自然風景 2"></li>-->
-<!--  <li data-category="nature"><img src="images/nature3.jpg" alt="自然風景 3"></li>-->
-<!--  <li data-category="nature"><img src="images/nature4.jpg" alt="自然風景 4"></li>-->
-<!--  <li data-category="nature"><img src="images/nature5.jpg" alt="自然風景 5"></li>-->
-    <li data-category="nature"><img src="https://placeholder.pics/svg/300x300/DEDEDE/555555/%E8%87%AA%E7%84%B6%E9%A2%A8%E6%99%AF%201"></li>
-    <li data-category="nature"><img src="https://placeholder.pics/svg/300x300/DEDEDE/555555/%E8%87%AA%E7%84%B6%E9%A2%A8%E6%99%AF%202"></li>
-    <li data-category="nature"><img src="https://placeholder.pics/svg/300x300/DEDEDE/555555/%E8%87%AA%E7%84%B6%E9%A2%A8%E6%99%AF%203"></li>
-    <li data-category="nature"><img src="https://placeholder.pics/svg/300x300/DEDEDE/555555/%E8%87%AA%E7%84%B6%E9%A2%A8%E6%99%AF%204"></li>
-    <li data-category="nature"><img src="https://placeholder.pics/svg/300x300/DEDEDE/555555/%E8%87%AA%E7%84%B6%E9%A2%A8%E6%99%AF%205"></li>
-
-  <!-- 城市風景圖 (共 3 張) -->
-<!--  <li data-category="city"><img src="images/city1.jpg" alt="城市風景 1"></li>-->
-<!--  <li data-category="city"><img src="images/city2.jpg" alt="城市風景 2"></li>-->
-<!--  <li data-category="city"><img src="images/city3.jpg" alt="城市風景 3"></li>-->
-    <li data-category="city"><img src="https://placeholder.pics/svg/300x300/DEDEDE/555555/%E5%9F%8E%E5%B8%82%E9%A2%A8%E6%99%AF%201"></li>
-    <li data-category="city"><img src="https://placeholder.pics/svg/300x300/DEDEDE/555555/%E5%9F%8E%E5%B8%82%E9%A2%A8%E6%99%AF%202"></li>
-    <li data-category="city"><img src="https://placeholder.pics/svg/300x300/DEDEDE/555555/%E5%9F%8E%E5%B8%82%E9%A2%A8%E6%99%AF%203"></li>
+  <li data-category="nature"><span class="hover-timer">0.0s</span><img src="imgs/nature1.jpg"></li>
+  <li data-category="nature"><span class="hover-timer">0.0s</span><img src="imgs/nature2.jpg"></li>
+  <li data-category="nature"><span class="hover-timer">0.0s</span><img src="imgs/nature3.jpg"></li>
+  <li data-category="nature"><span class="hover-timer">0.0s</span><img src="imgs/nature4.jpg"></li>
+  <li data-category="nature"><span class="hover-timer">0.0s</span><img src="imgs/nature5.jpg"></li>
+  <li data-category="city"><span class="hover-timer">0.0s</span><img src="imgs/city1.jpg"></li>
+  <li data-category="city"><span class="hover-timer">0.0s</span><img src="imgs/city2.jpg"></li>
+  <li data-category="city"><span class="hover-timer">0.0s</span><img src="imgs/city3.jpg"></li>
 </ul>
 
 <!-- JavaScript -->
